--- a/about-us.html
+++ b/about-us.html
@@ -48,13 +48,13 @@
             </a>
             <ul class="nav-links">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="explore.html">Explore</a>
                 </li>
                 <li>
-                    <a href="about-us.html">About Us</a>
+                    <a href="about-us.html" class="active">About Us</a>
                 </li>
                 <li>
                     <a href="contact-us.html">Contact Us</a>
@@ -252,10 +252,18 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Discover Our Story</h3>
+                    <p>Unveil the narratives behind exceptional talent and expertise</p>
+                </div>
+            </div>
+        </section>
         <section class="about_us">
             <div class="container">
                 <div class="row m-0">
-                    <div class="col-lg-5 col-md-12 col-sm-12 col-12">
+                    <div class="col-lg-5 col-md-12 col-sm-12 col-12 d-flex flex-column justify-content-center">
                         <span class="text-lg text-brand">find you dream job</span>
                         <h3>
                             Easily get job offers
@@ -273,12 +281,12 @@
                             <a href="explore.html" class="btn btn-default">Explore Resumes</a>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-md-12 col-sm-12 col-12 pl-200 overflow-hidden">
+                    <div class="col-lg-7 col-md-12 col-sm-12 col-12 pl-200">
                         <div class="banner-imgs banner-imgs-about">
                             <img loading="lazy" alt="jobhub" src="assets/images/banner-online-marketing.png"
                                 class="img-responsive main-banner shape-3">
-                            <span class="banner-sm-4"><img loading="lazy" alt="jobhub" src="assets/images/congratulation.svg"
-                                    class="img-responsive shape-2"></span>
+                            <span class="banner-sm-4"><img loading="lazy" alt="jobhub"
+                                    src="assets/images/congratulation.svg" class="img-responsive shape-2"></span>
                             <span class="banner-sm-5"><img loading="lazy" alt="jobhub" src="assets/images/web-dev.svg"
                                     class="img-responsive shape-1"></span>
                         </div>
@@ -407,6 +415,63 @@
                 </div>
             </div>
         </section>
+        <section class="features">
+            <div class="container">
+                <div class="row m-0">
+                    <div class="col-12 p-2">
+                        <div class="sec_title">
+                            <h3>Create Your Awesome Resumes And Enjoy Our Key Features</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <!-- Content -->
+                        <div class="service_single_content wow fadeInUp" data-wow-delay="0.2s">
+                            <!-- Icon -->
+                            <div class="service_icon">
+                                <img loading="lazy" src="assets/images/1.svg" alt="">
+                            </div>
+                            <h6>Proven CV Templates to increase Hiring Chance</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam ipsum.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <!-- Content -->
+                        <div class="service_single_content wow wow fadeInUp" data-wow-delay="0.3s">
+                            <!-- Icon -->
+                            <div class="service_icon">
+                                <img loading="lazy" src="assets/images/2.svg" alt="">
+                            </div>
+                            <h6>Creative, Modern and Clean Templates Design</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam ipsum.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <!-- Content -->
+                        <div class="service_single_content wow fadeInUp" data-wow-delay="0.4s">
+                            <!-- Icon -->
+                            <div class="service_icon">
+                                <img loading="lazy" src="assets/images/3.svg" alt="">
+                            </div>
+                            <h6>Easy and Intuitive Online CV and Resume Builder </h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam ipsum.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <!-- Content -->
+                        <div class="service_single_content wow fadeInUp" data-wow-delay="0.5s">
+                            <!-- Icon -->
+                            <div class="service_icon">
+                                <img loading="lazy" src="assets/images/4.svg" alt="">
+                            </div>
+                            <h6>Free to use. Developed by hiring professionals.</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam ipsum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="downloadApp">
             <div class="container">
                 <h2>Exceptional Experience with the App</h2>
@@ -459,7 +524,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -469,7 +535,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
