--- a/companies.html
+++ b/companies.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-   <!-- loader -->
+    <!-- loader -->
     <div class="preloader">
         <div class="preloaderImg"></div>
     </div>
@@ -252,6 +252,14 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Discover Companies</h3>
+                    <p>Uncover the essence of our organization and its journey</p>
+                </div>
+            </div>
+        </section>
         <section class="companies">
             <div class="container">
                 <div class="row m-0">
@@ -391,7 +399,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -401,7 +410,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
