--- a/company-signup.html
+++ b/company-signup.html
@@ -253,12 +253,20 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Join Us Today</h3>
+                    <p>Embark on your journey with us</p>
+                </div>
+            </div>
+        </section>
         <section class="auth_section">
             <div class="container p-0">
                 <div class="row m-0 justify-content-center">
                     <div class="col-lg-7 col-12 p-2">
                         <div class="auth_form">
-                            <div class="title">
+                            <div class="title force_center">
                                 <h4>Company Account</h4>
                                 <p>Please enter the company's information to complete the registration process.</p>
                             </div>
