--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!-- loader -->
+    <!-- loader -->
     <div class="preloader">
         <div class="preloaderImg"></div>
     </div>
@@ -49,7 +49,7 @@
             </a>
             <ul class="nav-links">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="explore.html">Explore</a>
@@ -58,7 +58,7 @@
                     <a href="about-us.html">About Us</a>
                 </li>
                 <li>
-                    <a href="contact-us.html">Contact Us</a>
+                    <a href="contact-us.html" class="active">Contact Us</a>
                 </li>
             </ul>
             <ul class="util">
@@ -253,6 +253,14 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Connect With Us</h3>
+                    <p>Let's bridge the gap and forge meaningful connections</p>
+                </div>
+            </div>
+        </section>
         <section class="contact">
             <div class="container">
                 <div class="row m-0">
@@ -261,6 +269,7 @@
                             <div class="form">
                                 <div class="row m-0">
                                     <h4>GET IN TOUCH</h4>
+                                    <p>Feel free to reach out to us for any inquiries or assistance.</p>
                                     <div class="col-12 p-2">
                                         <div class="input_field w-100">
                                             <label for="name"> Name </label>
@@ -384,7 +393,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -394,7 +404,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
