--- a/create-resume.html
+++ b/create-resume.html
@@ -253,6 +253,14 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Craft Your Resume</h3>
+                    <p>Shape your professional narrative with ease</p>
+                </div>
+            </div>
+        </section>
         <section class="create_resume_form auth_section">
             <div class="container p-0">
                 <div class="row m-0">
