--- a/explore.html
+++ b/explore.html
@@ -48,10 +48,10 @@
             </a>
             <ul class="nav-links">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="explore.html">Explore</a>
+                    <a href="explore.html" class="active">Explore</a>
                 </li>
                 <li>
                     <a href="about-us.html">About Us</a>
@@ -252,6 +252,14 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Explore Resumes</h3>
+                    <p>Unlock hidden talent and find skilled professionals</p>
+                </div>
+            </div>
+        </section>
         <section class="explore">
             <div class="container p-0">
                 <div class="row m-0">
