--- a/faqs.html
+++ b/faqs.html
@@ -252,6 +252,14 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Get Answers</h3>
+                    <p>Discover solutions to commonly asked questions</p>
+                </div>
+            </div>
+        </section>
         <section class="faqs">
             <div class="container">
                 <div class="row align-items-center justify-content-around">
