--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -253,12 +253,20 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Choose Your Plan</h3>
+                    <p>Select the perfect package for your needs</p>
+                </div>
+            </div>
+        </section>
         <section class="auth_section">
             <div class="container">
                 <div class="row m-0 justify-content-center">
                     <div class="col-12 p-2">
                         <div class="auth_form">
-                            <div class="title">
+                            <div class="title force_center">
                                 <h4>Pricing Plans</h4>
                                 <p>
                                     Choose the package that suits you from the available packages.
@@ -268,41 +276,41 @@
                                 <div class="plans">
                                     <div class="plan">
                                         <div class="img">
-                                            <img loading="lazy" src="assets/images/silver.png" alt="">
+                                            <img loading="lazy" src="assets/images/Silver.svg" alt="">
                                             <h5>Silver Package</h5>
                                         </div>
                                         <ul>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Publish first installment offers
                                                 </div>
                                                 <span>5</span>
                                             </li>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Publish monthly offer
                                                 </div>
                                                 <span>2</span>
                                             </li>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Cost of additional publication
                                                 </div>
                                                 <span>60</span>
                                             </li>
                                             <li class="dashed">
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Advertisement in monthly app notifications
                                                 </div>
                                                 <span>60</span>
                                             </li>
                                             <li class="dashed">
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Monthly popup ad upon app entry
                                                 </div>
                                                 <span>60</span>
@@ -317,41 +325,41 @@
                                     </div>
                                     <div class="plan">
                                         <div class="img">
-                                            <img loading="lazy" src="assets/images/silver.png" alt="">
-                                            <h5>Silver Package</h5>
+                                            <img loading="lazy" src="assets/images/Golden.svg" alt="">
+                                            <h5>Golden Package</h5>
                                         </div>
                                         <ul>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Publish first installment offers
                                                 </div>
-                                                <span>5</span>
+                                                <span>15</span>
                                             </li>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Publish monthly offer
                                                 </div>
-                                                <span>2</span>
+                                                <span>4</span>
                                             </li>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Cost of additional publication
                                                 </div>
-                                                <span>60</span>
+                                                <span>50</span>
                                             </li>
-                                            <li class="dashed">
+                                            <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Advertisement in monthly app notifications
                                                 </div>
-                                                <span>60</span>
+                                                <span>1</span>
                                             </li>
                                             <li class="dashed">
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Monthly popup ad upon app entry
                                                 </div>
                                                 <span>60</span>
@@ -366,44 +374,93 @@
                                     </div>
                                     <div class="plan">
                                         <div class="img">
-                                            <img loading="lazy" src="assets/images/silver.png" alt="">
-                                            <h5>Silver Package</h5>
+                                            <img loading="lazy" src="assets/images/Platinum.svg" alt="">
+                                            <h5>Platinum Package</h5>
                                         </div>
                                         <ul>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Publish first installment offers
                                                 </div>
-                                                <span>5</span>
+                                                <span>20</span>
                                             </li>
                                             <li>
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Publish monthly offer
+                                                </div>
+                                                <span>6</span>
+                                            </li>
+                                            <li>
+                                                <div class="benefit">
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
+                                                    Cost of additional publication
+                                                </div>
+                                                <span>45</span>
+                                            </li>
+                                            <li>
+                                                <div class="benefit">
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
+                                                    Advertisement in monthly app notifications
                                                 </div>
                                                 <span>2</span>
                                             </li>
-                                            <li>
-                                                <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
-                                                    Cost of additional publication
-                                                </div>
-                                                <span>60</span>
-                                            </li>
                                             <li class="dashed">
                                                 <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
-                                                    Advertisement in monthly app notifications
-                                                </div>
-                                                <span>60</span>
-                                            </li>
-                                            <li class="dashed">
-                                                <div class="benefit">
-                                                    <i class="fa-light fa-check"></i>
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
                                                     Monthly popup ad upon app entry
                                                 </div>
                                                 <span>60</span>
+                                            </li>
+                                        </ul>
+                                        <div class="price">
+                                            <h5>1500 <span>SAR</span><span>/ Year</span></h5>
+                                            <button>
+                                                Get Plan
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="plan">
+                                        <div class="img">
+                                            <img loading="lazy" src="assets/images/Diamond.svg" alt="">
+                                            <h5>Diamond Package</h5>
+                                        </div>
+                                        <ul>
+                                            <li>
+                                                <div class="benefit">
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
+                                                    Publish first installment offers
+                                                </div>
+                                                <span>25</span>
+                                            </li>
+                                            <li>
+                                                <div class="benefit">
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
+                                                    Publish monthly offer
+                                                </div>
+                                                <span>10</span>
+                                            </li>
+                                            <li>
+                                                <div class="benefit">
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
+                                                    Cost of additional publication
+                                                </div>
+                                                <span>40</span>
+                                            </li>
+                                            <li>
+                                                <div class="benefit">
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
+                                                    Advertisement in monthly app notifications
+                                                </div>
+                                                <span>4</span>
+                                            </li>
+                                            <li>
+                                                <div class="benefit">
+                                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
+                                                    Monthly popup ad upon app entry
+                                                </div>
+                                                <span>1</span>
                                             </li>
                                         </ul>
                                         <div class="price">
