--- a/privacy.html
+++ b/privacy.html
@@ -252,6 +252,14 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Explore Our Privacy Policy</h3>
+                    <p>Understand how we protect your information</p>
+                </div>
+            </div>
+        </section>
         <section class="terms">
             <div class="container">
                 <h1>Privacy Policy</h1>
