--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <section class="hero_section">
             <div class="container">
                 <div class="row m-0">
-                    <div class="col-lg-6 col-12 p-2">
+                    <div class="col-lg-6 col-12 p-2 d-flex align-items-center">
                         <div class="hero_content">
                             <div class="hint">
                                 <span><i class="fa-regular fa-dollar-sign"></i></span>
