--- a/individual-signup.html
+++ b/individual-signup.html
@@ -253,12 +253,20 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Join Us Today</h3>
+                    <p>Embark on your journey with us</p>
+                </div>
+            </div>
+        </section>
         <section class="auth_section">
             <div class="container p-0">
                 <div class="row m-0 justify-content-center">
                     <div class="col-lg-7 col-12 p-2">
                         <div class="auth_form">
-                            <div class="title">
+                            <div class="title force_center">
                                 <h4>Individual Account</h4>
                                 <p>Please enter your personal information to complete the registration process.</p>
                             </div>
@@ -267,7 +275,8 @@
                                     <div class="col-12 p-2 mb-1">
                                         <div class="image_change">
                                             <div class="image_upload">
-                                                <img loading="lazy" src="assets/images/avatar.svg" alt="" id="uploadedImage">
+                                                <img loading="lazy" src="assets/images/avatar.svg" alt=""
+                                                    id="uploadedImage">
                                                 <input type="file" name="file" id="img-upload">
                                                 <label for="img-upload">
                                                     <i class="fa-light fa-plus"></i>
@@ -347,7 +356,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -357,7 +367,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
