--- a/login.html
+++ b/login.html
@@ -253,10 +253,18 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Sign In</h3>
+                    <p>Unlock exclusive access to your account</p>
+                </div>
+            </div>
+        </section>
         <section class="auth_section">
             <div class="container">
                 <div class="row m-0 justify-content-center">
-                    <div class="col-lg-8 col-12 p-2">
+                    <div class="col-lg-7 col-12 p-2">
                         <div class="auth_form">
                             <div class="title">
                                 <h4>Welcome Back</h4>
@@ -308,9 +316,9 @@
                                 </div>
                                 <p class="continue">
                                     By continuing, you agree to the
-                                    <a href="terms-conditions.html">terms of use</a>
+                                    <a href="terms.html">terms of use</a>
                                     and
-                                    <a href="privacy-policy.html">privacy policy</a>
+                                    <a href="privacy.html">privacy policy</a>
                                     of the application
                                 </p>
                                 <button class="save_btn">Login</button>
@@ -328,6 +336,11 @@
                                     </a>
                                 </div>
                             </form>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-12 p-2 d-lg-block d-none">
+                        <div class="img">
+                            <img src="assets/images/login.svg" alt="login">
                         </div>
                     </div>
                 </div>
@@ -368,7 +381,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -378,7 +392,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
