--- a/otp.html
+++ b/otp.html
@@ -253,10 +253,18 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Sign In</h3>
+                    <p>Unlock exclusive access to your account</p>
+                </div>
+            </div>
+        </section>
         <section class="auth_section">
             <div class="container">
                 <div class="row m-0 justify-content-center">
-                    <div class="col-lg-6 col-12 p-2">
+                    <div class="col-lg-6 col-12 p-2 d-flex align-items-center">
                         <div class="auth_form">
                             <div class="title">
                                 <h4>Enter Verification Code</h4>
@@ -283,6 +291,11 @@
                                     Confirm
                                 </button>
                             </form>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-12 p-2 d-lg-block d-none">
+                        <div class="img">
+                            <img src="assets/images/otp.svg" alt="login">
                         </div>
                     </div>
                 </div>
@@ -323,7 +336,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -333,7 +347,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
