--- a/resumes.html
+++ b/resumes.html
@@ -278,136 +278,154 @@
             <div class="container">
                 <div class="row m-0">
                     <div class="col-lg-4 col-md-6 col-12 p-2">
-                        <a href="profile.html" class="profile_card">
-                            <div class="img">
+                        <div class="profile_card">
+                            <a href="profile.html" class="img">
                                 <img loading="lazy" src="assets/images/friend-7.jpg" alt="">
-                            </div>
-                            <div class="owner">
+                            </a>
+                            <a href="profile.html" class="owner">
                                 <h6>Mahmoud Elkomy</h6>
                                 <div class="title_age">
                                     <span>Senior UI/UX</span>
                                     <span>27 years old</span>
                                 </div>
-                            </div>
+                            </a>
                             <div class="buttons">
-                                <button>
+                                <a href="profile.html">
+                                    <img loading="lazy" src="assets/images/eye.svg" alt="">
+                                </a>
+                                <a href="create-resume.html">
                                     <img loading="lazy" src="assets/images/edit.svg" alt="">
-                                </button>
-                                <button>
+                                </a>
+                                <button data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
                                     <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 p-2">
-                        <a href="profile.html" class="profile_card">
-                            <div class="img">
+                        <div class="profile_card">
+                            <a href="profile.html" class="img">
                                 <img loading="lazy" src="assets/images/friend-8.jpg" alt="">
-                            </div>
-                            <div class="owner">
+                            </a>
+                            <a href="profile.html" class="owner">
                                 <h6>Hassan Ibrahim</h6>
                                 <div class="title_age">
                                     <span>Project Manager</span>
                                     <span>34 years old</span>
                                 </div>
-                            </div>
+                            </a>
                             <div class="buttons">
-                                <button>
+                                <a href="profile.html">
+                                    <img loading="lazy" src="assets/images/eye.svg" alt="">
+                                </a>
+                                <a href="create-resume.html">
                                     <img loading="lazy" src="assets/images/edit.svg" alt="">
-                                </button>
-                                <button>
+                                </a>
+                                <button data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
                                     <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 p-2">
-                        <a href="profile.html" class="profile_card">
-                            <div class="img">
+                        <div class="profile_card">
+                            <a href="profile.html" class="img">
                                 <img loading="lazy" src="assets/images/friend-12.jpg" alt="">
-                            </div>
-                            <div class="owner">
+                            </a>
+                            <a href="profile.html" class="owner">
                                 <h6>Mahmoud Elkomy</h6>
                                 <div class="title_age">
                                     <span>Senior UI/UX</span>
                                     <span>27 years old</span>
                                 </div>
-                            </div>
+                            </a>
                             <div class="buttons">
-                                <button>
+                                <a href="profile.html">
+                                    <img loading="lazy" src="assets/images/eye.svg" alt="">
+                                </a>
+                                <a href="create-resume.html">
                                     <img loading="lazy" src="assets/images/edit.svg" alt="">
-                                </button>
-                                <button>
+                                </a>
+                                <button data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
                                     <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 p-2">
-                        <a href="profile.html" class="profile_card">
-                            <div class="img">
+                        <div class="profile_card">
+                            <a href="profile.html" class="img">
                                 <img loading="lazy" src="assets/images/friend-5.jpg" alt="">
-                            </div>
-                            <div class="owner">
+                            </a>
+                            <a href="profile.html" class="owner">
                                 <h6>Hala Hassan</h6>
                                 <div class="title_age">
                                     <span>Senior UI/UX</span>
                                     <span>27 years old</span>
                                 </div>
-                            </div>
+                            </a>
                             <div class="buttons">
-                                <button>
+                                <a href="profile.html">
+                                    <img loading="lazy" src="assets/images/eye.svg" alt="">
+                                </a>
+                                <a href="create-resume.html">
                                     <img loading="lazy" src="assets/images/edit.svg" alt="">
-                                </button>
-                                <button>
+                                </a>
+                                <button data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
                                     <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 p-2">
-                        <a href="profile.html" class="profile_card">
-                            <div class="img">
+                        <div class="profile_card">
+                            <a href="profile.html" class="img">
                                 <img loading="lazy" src="assets/images/friend-10.jpg" alt="">
-                            </div>
-                            <div class="owner">
+                            </a>
+                            <a href="profile.html" class="owner">
                                 <h6>Hala Hassan</h6>
                                 <div class="title_age">
                                     <span>Senior UI/UX</span>
                                     <span>27 years old</span>
                                 </div>
-                            </div>
+                            </a>
                             <div class="buttons">
-                                <button>
+                                <a href="profile.html">
+                                    <img loading="lazy" src="assets/images/eye.svg" alt="">
+                                </a>
+                                <a href="create-resume.html">
                                     <img loading="lazy" src="assets/images/edit.svg" alt="">
-                                </button>
-                                <button>
+                                </a>
+                                <button data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
                                     <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 p-2">
-                        <a href="profile.html" class="profile_card">
-                            <div class="img">
+                        <div class="profile_card">
+                            <a href="profile.html" class="img">
                                 <img loading="lazy" src="assets/images/friend-9.jpg" alt="">
-                            </div>
-                            <div class="owner">
+                            </a>
+                            <a href="profile.html" class="owner">
                                 <h6>Hala Hassan</h6>
                                 <div class="title_age">
                                     <span>Senior UI/UX</span>
                                     <span>27 years old</span>
                                 </div>
-                            </div>
+                            </a>
                             <div class="buttons">
-                                <button>
+                                <a href="profile.html">
+                                    <img loading="lazy" src="assets/images/eye.svg" alt="">
+                                </a>
+                                <a href="create-resume.html">
                                     <img loading="lazy" src="assets/images/edit.svg" alt="">
-                                </button>
-                                <button>
+                                </a>
+                                <button data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
                                     <img loading="lazy" src="assets/images/trash.svg" alt="">
                                 </button>
                             </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -447,7 +465,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -457,7 +476,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
@@ -557,6 +577,21 @@
             </div>
         </div>
     </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this Resume?</p>
+                    <div class="buttons">
+                        <button type="button" class="cancel_btn" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="delete_btn">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- js -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/app.js"></script>
