--- a/terms.html
+++ b/terms.html
@@ -252,6 +252,14 @@
     </header>
     <!-- main wrapper -->
     <main>
+        <section class="banner_section">
+            <div class="container">
+                <div class="content">
+                    <h3>Read Our Terms</h3>
+                    <p>Understand the guidelines and agreements</p>
+                </div>
+            </div>
+        </section>
         <section class="terms">
             <div class="container">
                 <h1 class="mb-4">Terms and Conditions</h1>
