--- a/about-us.html
+++ b/about-us.html
@@ -62,10 +62,8 @@
             </ul>
             <ul class="util">
                 <li>
-                    <a id="searchOpen">
-                        <span>
-                            <i class="fa-regular fa-magnifying-glass"></i>
-                        </span>
+                    <a>
+                        <span>AR</span>
                     </a>
                 </li>
                 <li>
@@ -268,15 +266,12 @@
                         <h3>
                             Easily get job offers
                         </h3>
-                        <p>Proin ullamcorper pretium orci. Donec
-                            necscele risque leo. Nam massa dolor imperdiet neccon sequata congue idsem. Maecenas
-                            malesuada faucibus finibus. </p>
-                        <p>Proin ullamcorper pretium orci. Donec
-                            necscele risque leo. Nam massa dolor imperdiet neccon sequata congue idsem. Maecenas
-                            malesuada faucibus finibus. </p>
-                        <p>Proin ullamcorper pretium orci. Donec
-                            necscele risque leo. Nam massa dolor imperdiet neccon sequata congue idsem. Maecenas
-                            malesuada faucibus finibus. </p>
+                        <p>
+                            Introducing "Jobs In Saudi" - the game-changing app for job seekers in Saudi Arabia.
+                            Find your dream job with ease, stay updated with the latest listings, and kickstart your
+                            career
+                            journey like never before. Join us today and unlock endless possibilities.
+                        </p>
                         <div class="btn-wrapper">
                             <a href="explore.html" class="btn btn-default">Explore Resumes</a>
                         </div>
@@ -420,7 +415,7 @@
                 <div class="row m-0">
                     <div class="col-12 p-2">
                         <div class="sec_title">
-                            <h3>Create Your Awesome Resumes And Enjoy Our Key Features</h3>
+                            <h3>expose your skills and experience to employers in Saudi Arabia</h3>
                         </div>
                     </div>
                 </div>
