--- a/create-resume.html
+++ b/create-resume.html
@@ -63,10 +63,8 @@
             </ul>
             <ul class="util">
                 <li>
-                    <a id="searchOpen">
-                        <span>
-                            <i class="fa-regular fa-magnifying-glass"></i>
-                        </span>
+                    <a>
+                        <span>AR</span>
                     </a>
                 </li>
                 <li>
@@ -935,7 +933,7 @@
                                                     <label class="img_upload">
                                                         <input type="file" accept="image/*" multiple name="file"
                                                             id="img-upload" onchange="handleFileSelect(event)">
-                                                        <div class="img">
+                                                        <div class="img justify-content-center">
                                                             <img loading="lazy" src="assets/images/plus.svg" alt="plus">
                                                         </div>
                                                     </label>
