--- a/otp.html
+++ b/otp.html
@@ -63,10 +63,8 @@
             </ul>
             <ul class="util">
                 <li>
-                    <a id="searchOpen">
-                        <span>
-                            <i class="fa-regular fa-magnifying-glass"></i>
-                        </span>
+                    <a>
+                        <span>AR</span>
                     </a>
                 </li>
                 <li>
